SBVTestSuite/TestSuite/CompileTests/SCase/SCase32.stderr
SCase32.hs:13:1: error: [GHC-39584]
    mkSymbolic: Unsupported constructor kind
      Datatype   : A
      Constructor: F
      Kind       : T.A -> GHC.Internal.Types.Bool
      
      Higher order fields (i.e., function values) are not supported.

   |
13 | mkSymbolic [''A]
   | ^^^^^^^^^^^^^^^^

